--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,14 +17,27 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>420</x>
       <y>520</y>
-      <width>121</width>
-      <height>41</height>
+      <width>311</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>Открыть дверь</string>
+     <string>Открыть/Закрыть дверь</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>520</y>
+      <width>311</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Открыть/Закрыть окно</string>
     </property>
    </widget>
   </widget>
